# FootballManager

./: .gitignore  .gitmodules  .travis.yml  BAYERN_SQUAD.txt  CMakeLists.txt  Doxyfile  Footballer.h  OurTeam.h  README.md  REAL_SQUAD.txt  UBOGIE_SQUAD.txt  coords.json  main.cpp  schema2.txt  team1.txt  Баги у менеджера (версия Абрамова).doc  Баги у менеджера (оригинал).doc  координаты.txt
doc/: OurTeam_8h.html  OurTeam_8h__dep__incl.dot  OurTeam_8h__dep__incl.md5  OurTeam_8h__incl.dot  OurTeam_8h__incl.md5  OurTeam_8h_source.html  RoundObj_8h.html  RoundObj_8h__dep__incl.dot  RoundObj_8h__dep__incl.md5  RoundObj_8h__incl.dot  RoundObj_8h__incl.md5  RoundObj_8h_source.html  Schemas_8h.html  Schemas_8h__dep__incl.dot  Schemas_8h__dep__incl.md5  Schemas_8h__incl.dot  Schemas_8h__incl.md5  Schemas_8h_source.html  annotated.html  classRoundObj-members.html  classRoundObj.html  classRoundObj__coll__graph.dot  classRoundObj__coll__graph.md5  classRoundObj__inherit__graph.dot  classRoundObj__inherit__graph.md5  classes.html  const_8h.html  const_8h__dep__incl.dot  const_8h__dep__incl.md5  const_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_d93a1d4020dea85bb71b237545b5e722_dep.dot  dir_d93a1d4020dea85bb71b237545b5e722_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  (+21 more)
doc/search/: all_2.js  all_3.js  (+25 more)
files/: ARSENAL_SQUAD.txt  CHELSEA_SQUAD.txt  NIGGAZ_SQUAD.txt  schema1.txt  team2.txt
src/: Footballer.h  Icon.h  RoundObj.h  Schemas.h  const.h  scheme.h
(+2 files in other folders)
